Projeto pronto sem videos

--- a/Equipe01/index01.html
+++ b/Equipe01/index01.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="images/logo02.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="scripts/characterStore.js"></script>
+    <script src="scripts/helpers.js"></script>
     <script src="scripts/main.js"></script>
-    <script src="scripts/actions.js"></script>
     <title>Universo HQ - Home</title>
 </head>
 <body>
@@ -46,7 +46,7 @@
         </section>
 
         <div class="card" id="inserir">
-            <form method="POST" action="">
+            <form>
                 <h2>Cadastro</h2>
                 <label for="nome" class="title">Conhecido como:</label>
                 <input type="hidden" name="charId" id="charId" value=""></input>
