--- a/Equipe01/lists.html
+++ b/Equipe01/lists.html
@@ -7,18 +7,19 @@
     <link rel="shortcut icon" href="images/logo02.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="scripts/characterStore.js"></script>
-    <script src="scripts/main.js"></script>
-    <script src="scripts/actions.js"></script>
+    <script src="scripts/defines.js"></script>
+    <script src="scripts/helpers.js"></script>
+    <script src="scripts/list.js"></script>
     <title>Universo HQ - Personagens</title>
 </head>
 <body>
     <header id="start">
         <div id="menu">
             <div>
-                <a href="#start"><img src="images/logo02.png" alt="Logo Universo HQ"></a>
+                <a href="index01.html#start"><img src="images/logo02.png" alt="Logo Universo HQ"></a>
                 <ul>
-                    <li class="links"><a href="#inserir">Inserir Personagens</a></li>
-                    <li class="links"><a href="#listagem">Listar Todos</a></li>
+                    <li class="links"><a href="index01.html#inserir">Inserir Personagens</a></li>
+                    <li class="links"><a href="index01.html#listagem">Listar Todos</a></li>
                     <li class="tipos-list"><a>Listagem por Perfil</a>
                         <div class="tipos-perfil">
                             <a class="itens-perfil" id="link-heroi" onclick="loadHero()"  href="lists.html#herois" target="_blank">Herói</a>
@@ -45,9 +46,9 @@
             Os grupos mais famosos de heróis são a <strong>Liga da Justiça(DC)</strong> e os <strong>Vingadores(Marvel)</strong>.
             </p>
 
-            <table id="listagem">
+            <table id="list-heroes">
                 <thead>
-                <tr id="listagem-header">
+                <tr id="list-heroes-header">
                     <th>Nome</th>
                     <th>Alter ego</th>
                     <th>Franquia</th>
@@ -56,7 +57,7 @@
                     <th id="actions">#</th>
                 </tr>
             </thead>
-            <tbody id="listagem-body">
+            <tbody id="list-heroes-body">
 
             </tbody>
             </table>
@@ -79,9 +80,9 @@
                 <strong>IMA(Marvel)</strong>, <strong>Hydra(Marvel)</strong> e
                 <strong>Irmandade da Serpente(Marvel)</strong>.
             </p>
-            <table id="listagem">
+            <table id="list-villains">
                 <thead>
-                <tr id="listagem-header">
+                <tr id="list-villains-header">
                     <th>Nome</th>
                     <th>Alter ego</th>
                     <th>Franquia</th>
@@ -90,7 +91,7 @@
                     <th id="actions">#</th>
                 </tr>
             </thead>
-            <tbody id="listagem-body">
+            <tbody id="list-villains-body">
 
             </tbody>
             </table>
@@ -110,10 +111,10 @@
                 <strong>Esquadrão Suicida(DC)</strong> e os
                 <strong>Guardiões da Galáxia(Marvel)</strong>.
             </p>
-            <table id="listagem">
+            <table id="list-antiheroes">
                 
                 <thead>
-                <tr id="listagem-header">
+                <tr id="list-antiheroes-header">
                     <th>Nome</th>
                     <th>Alter ego</th>
                     <th>Franquia</th>
@@ -122,7 +123,7 @@
                     <th id="actions">#</th>
                 </tr>
             </thead>
-            <tbody id="listagem-body">
+            <tbody id="list-antiheroes-body">
 
             </tbody>
             </table>
