--- a/Equipe03/tabela.html
+++ b/Equipe03/tabela.html
@@ -41,10 +41,6 @@
 			color: white;
 			}
 			
-			.apresentação{
-			font-family: Lato;
-			}
-			
 			header h1{
 			font-family:Calibri Light;
 			text-align:center;
@@ -62,12 +58,13 @@
 			text-align:center;
 			margin-left:25%;
 			margin-right:25%;
-			margin-top:5%;
+			margin-top:2.5%;
 			}
 			
 			footer	{
 			position:fixed;
 			bottom:0;
+			left:5px;
 			}
 			
 			body {
@@ -76,7 +73,58 @@
 			margin-top:0px;
 			}
 			
+			table{
+			text-align:center;
+			margin-left:30%;
+			margin-right:25%;
+			
+			}
+			
+			table, th, td {
+			border: 1px solid black;
+			border-collapse: collapse;
+			float: center;
+			}
+			
+			table th, td{
+			padding:5px;
+			}
+			
 		</style>
+		<script>
+		var index = 1;
+		function reload(){
+		location.reload();
+		}
+		
+		function preencher(){
+		var tabela = document.getElementById("tabela");
+		var totalLinhas = tabela.rows.length;
+		var linha = tabela.insertRow(totalLinhas);
+		var coluna1 = linha.insertCell(0);
+		var coluna2 = linha.insertCell(1);
+		var coluna3 = linha.insertCell(2);
+		var coluna4 = linha.insertCell(3);
+		var coluna5 = linha.insertCell(4);
+		coluna1.innerHTML = document.getElementById("fnome").value;
+		coluna2.innerHTML = document.getElementById("fidade").value;
+		coluna3.innerHTML = document.getElementById("ftel").value;
+		coluna4.innerHTML = document.getElementById("fcpf").value;
+		coluna5.id = index;
+		coluna5.innerHTML = "<button type='button' onclick='excluir("+coluna5.id+")'>Exlcluir</button> <button type='button' onclick='editar()'>Editar</button>";
+		index++;
+		} 
+		
+		function excluir(id){
+		var tabela = document.getElementById("tabela");
+		document.getElementById("tabela").deleteRow(tabela.rowIndex);
+		}
+		
+		function editar(){
+		
+		}
+		</script>
+		
 		<title>Regularis Informática</title>
 	</head>
 	
@@ -84,9 +132,9 @@
 		<nav>
 			<div class="topnavmenu">
 			<ul>
-				<li><a href=#home><img src="https://cdn.discordapp.com/attachments/374275988995178497/826068284562341918/logo2.png" title="logo"></img><a href=#home></a>
-				<li><a href=#home>A Empresa</a></li>
-				<li><a href=#tabela>Faça Parte</a></li>
+				<li><a href="home.html"><img src="https://cdn.discordapp.com/attachments/374275988995178497/826068284562341918/logo2.png" title="logo"></img></li>
+				<li><a href="home.html">A Empresa</a></li>
+				<li><a href="">Faça Parte</a></li>
 			</ul>
 			
 			<img src="https://cdn.discordapp.com/attachments/374275988995178497/826090005331050506/aa3.png" title="foto perfil"></img>
@@ -115,9 +163,20 @@
 		<input type="text" id="fcpf" name="fcpf"><br><br>
 		
 		<br>
-		<input type="submit" value="Cadastrar">
+		<button type="button" onclick="preencher()">Cadastrar</button>
 		</form>
+		<br><br>
 		
+		<p> Confirme seus dados:</p>
+		<table id="tabela">
+			<tr>
+				<th>Nome Completo</th>
+				<th>Idade</th>
+				<th>Telefone</th>
+				<th>CPF</th>
+			</tr>
+		</table>
+
 		
 		<footer>
 		<h6>Página feita por Gabriel Rupp Kosilek Lopes, Matheus Petters Bevilaqua</h6>
